Changed import from #root/config to #config

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/morgan.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/morgan.mustache
@@ -1,5 +1,5 @@
 import morgan from 'morgan';
-import config from '#root/config';
+import config from '#config';
 import logger from '#drivers/logger';
 
 const getIpFormat = () => (config.NODE_ENV === 'prod' ? ':remote-addr - ' : '');
