Fixed import aliasing
Since the folder structure for generated code has changed, the import
aliases also had to change.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/package.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/package.mustache
@@ -15,13 +15,14 @@
   ],
   "imports": {
     "#root/*": "./build/*.js",
-    "#drivers/*": "./build/drivers/*.js",
-    "#services": "./build/services/index.js",
-    "#services/*": "./build/services/*.js",
-    "#models": "./build/models/index.js",
-    "#models/*": "./build/models/*.js",
-    "#controllers": "./build/controllers/index.js",
-    "#controllers/*": "./build/controllers/*.js"
+    "#lib/*": "./build/lib/*.js",
+    "#config": "./build/lib/config.js",
+    "#drivers/*": "./build/lib/drivers/*.js",
+    "#models": "./build/lib/models/index.js",
+    "#models/*": "./build/lib/models/*.js",
+    "#apiserver/*": "./build/apiserver/*.js",
+    "#apiservices": "./build/apiserver/services/index.js",
+    "#apicontrollers": "./build/apiserver/controllers/index.js"
   },
   "type": "module",
   "license": "Unlicense",
