Folder structure change.
Since the generated code's folder structure has changed. The imports
were updated.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/service.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/service.mustache
@@ -1,6 +1,6 @@
 {{>license}}
-import APIError, { WrapError } from '#drivers/api-error';
-import Service, { ServiceResponse } from '#services/service';
+import { WrapError } from '#drivers/api-error';
+import Service, { ServiceResponse } from '#apiserver/services/service';
 import httpStatus from 'http-status';
 //FIXME: Use types instead of any for all the service level api functions.
 
